# cloud-game-development-toolkit

./: .flake8  .gitignore  pyproject.toml  tox.ini
cgdtk-cli/: README.md  pyproject.toml
cgdtk-cli/src/cgdtk_cli/: environment.py  exceptions.py  module.py  utils.py
cgdtk-cli/src/cgdtk_cli/cli/: __init__.py  cmd_environment.py  cmd_modules.py  cmd_tools.py
cgdtk-cli/src/cgdtk_cli/tools/: __init__.py  awscli.py  base.py
cgdtk-cli/tests/: test_cgdtk_cli.py
cgdtkcli/: cli.py  config.py  console.py  constants.py  exceptions.py  logging.py  models.py  project.py  tools.py  utils.py
cgdtkcli/cli/: cmd_config.py  cmd_project.py  cmd_tools.py  entry.py
cgdtkcli/config/: __init__.py  environment.py  project.py
cgdtkcli/project/: cli.py  models.py
cgdtkcli/terminal/: app.py  cgdtk.tcss  logs.py  tools.py
cgdtkcli/tools/: __init__.py  awscli.py  tool.py
environments/: README.md  config.yaml
environments/templates/: README.md.j2
environments/templates/terraform/: README.md.j2  main.tf.j2
tests/: test_cgdtkcli.py
